--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,23 @@
 {
-    "name": "jazmy/jaz-form-builder",
+    "name": "mednasiridev/jaz-form-builder",
     "description": "Laravel Package for Creating a Drag-and-Drop Form Builder Using JQuery Form Builder",
     "authors": [
         {
-            "name": "Jasmine Robinson",
-            "email": "jaz@jazmy.com"
+            "name": "Nasiri Mohammed",
+            "email": "mrdextercompany@gmail.com"
         }
     ],
     "require": {
     },
     "autoload": {
         "psr-4": {
-            "jazmy\\FormBuilder\\": "src/"
+            "mednasiridev\\FormBuilder\\": "src/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "jazmy\\FormBuilder\\FormBuilderServiceProvider"
+                "mednasiridev\\FormBuilder\\FormBuilderServiceProvider"
             ]
         }
     }
